--- a/pom.xml
+++ b/pom.xml
@@ -19,15 +19,17 @@
 		<java.version>1.8</java.version>
 	</properties>
 
-	<dependencies>
-	
-		<!--
+	<dependencies>	
 		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-gcp-starter-sql-mysql</artifactId>
-			<version>1.2.5.RELEASE</version>
+			<groupId>com.vividsolutions</groupId>
+			<artifactId>jts</artifactId>
+			<version>1.13</version>
 		</dependency>
-		-->
+		
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-spatial</artifactId>
+		</dependency>
 		
 		<dependency>
 			<groupId>org.flywaydb</groupId>
